# Trilha_Python

./: README.md
Primeiro projeto/: Exemplo_1.py
Projeto_1/: Exemplo_2.py  KPI.py  Readme.md
Projeto_2/: KPI_2.py  Readme.md
Projeto_3/: KPI_3.py  Readme.md
Projeto_4/: KPI_4.py
Projeto_5/: Funcao_DEF.py  Funcao_Exemplo.py
Projeto_5/ETL/: etl.py  pipeline2.py  vendas.csv
Projeto_5/ETL_2/: etl2.py
Projeto_6/: etl_pandas.py  pipeline.py  pyproject.toml
Testes/: Exercicio_1.py  Exercicio_2.py  Exercicio_3.py
