[project]
name = "projeto-6"
version = "2.1.4"
description = ""
authors = [
    {name = "João Pedro",email = "jcunhaamorim@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.4"
dependencies = [
    "pandera (>=0.26.0,<0.27.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
